Add image upload to users model

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Image url:</strong>
-  <%= @user.image_url %>
+  <%= image_tag @user.image_url_url %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
