--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,4 @@
-<%= form_with(model: user, local: true) do |form| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= form_for(@user, :html => {:multipart => true}) do |form| %>
   <div class="field">
     <%= form.label :username %>
     <%= form.text_field :username %>
@@ -18,7 +6,7 @@
 
   <div class="field">
     <%= form.label :image_url %>
-    <%= form.text_field :image_url %>
+    <%= form.file_field :image_url %>
   </div>
 
   <div class="actions">
