--- a/app/views/feed_items/show.html.haml
+++ b/app/views/feed_items/show.html.haml
@@ -1,22 +1,31 @@
 %p#notice= notice
-%p
-  %strong Item type:
-  = @feed_item.item_type
-%p
-  %strong Username:
-  = @feed_item.username
-%p
-  %strong User:
-  = @feed_item.user_id
-%p
-  %strong Item description:
-  = @feed_item.item_description
-%p
-  %strong Image url:
-  = @feed_item.image_url
-%p
-  %strong Video url:
-  = @feed_item.video_url
-= link_to 'Edit', edit_feed_item_path(@feed_item)
-|
-= link_to 'Back', feed_items_path
+.container.text-center
+  .row
+    .col-lg-2.col-md-2.col-sm-12.col-xs-12.text-center
+      %p
+        %strong Item type:
+        = @feed_item.item_type
+    .col-lg-1.col-md-1.col-sm-12.col-xs-12.text-center
+      %p
+        %strong Username:
+        = @feed_item.username
+    .col-lg-1.col-md-1.col-sm-12.col-xs-12.text-center
+      %p
+        %strong User:
+        = @feed_item.user_id
+    .col-lg-2.col-md-2.col-sm-12.col-xs-12.text-center
+      %p
+        %strong Item description:
+        = @feed_item.item_description
+    .col-lg-3.col-md-3.col-sm-12.col-xs-12.text-center
+      %p
+        %strong Image url:
+        = @feed_item.image_url
+    .col-lg-3.col-md-3.col-sm-12.col-xs-12.text-center
+      %p
+        %strong Video url:
+        = @feed_item.video_url
+
+  = link_to 'Edit', edit_feed_item_path(@feed_item)
+  |
+  = link_to 'Back', feed_items_path
