--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,18 +1,16 @@
 %p#notice= notice
-%h1 Users
-%table
-  %thead
-    %tr
-      %th Username
-      %th Image url
-      %th{:colspan => "3"}
-  %tbody
+.container
+  %h1 Users
+  = link_to 'New User', new_user_path
+  .row
     - @users.each do |user|
-      %tr
-        %td= user.username
-        %td= user.image_url
-        %td= link_to 'Show', user
-        %td= link_to 'Edit', edit_user_path(user)
-        %td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
-%br/
-= link_to 'New User', new_user_path
+      .col-lg-6.col-md-6.col-sm-6.col-xs-12
+        Username
+        = user.username
+      .col-lg-6.col-md-6.col-sm-6.col-xs-12
+        Image url
+        = user.image_url
+        %br
+        = link_to 'Show', user
+        = link_to 'Edit', edit_user_path(user)
+        = link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
