Start to link ar products and categories

--- a/app/views/ar_subcategories/_form.html.haml
+++ b/app/views/ar_subcategories/_form.html.haml
@@ -12,5 +12,8 @@
   .field
     = f.label :image_url
     = f.text_field :image_url
+  .field
+    = f.label 'Category id'
+    = f.number_field :ar_categories_id
   .actions
     = f.submit 'Save'
