--- a/app/views/ar_products/_form.html.haml
+++ b/app/views/ar_products/_form.html.haml
@@ -18,5 +18,8 @@
   .field
     = f.label :product_serialized_url
     = f.text_field :product_serialized_url
+  .field
+    = f.label :ar_subcategory
+    = f.number_field :ar_subcategories_id
   .actions
     = f.submit 'Save'
