--- a/app/views/ar_categories/show.html.haml
+++ b/app/views/ar_categories/show.html.haml
@@ -1,8 +1,8 @@
 %p#notice= notice
 
 %p
-  %b Ar category name:
-  = @ar_category.ar_category_name
+  %b Name:
+  = @ar_category.name
 %p
   %b Image url:
   = @ar_category.image_url
