--- a/app/views/ar_products/_form.html.haml
+++ b/app/views/ar_products/_form.html.haml
@@ -13,13 +13,7 @@
     = f.label :product_description
     = f.text_field :product_description
   .field
-    = f.label :product_url
-    = f.text_field :product_url
-  .field
-    = f.label :product_serialized_url
-    = f.text_field :product_serialized_url
-  .field
-    = f.label :ar_subcategory
-    = f.number_field :ar_subcategories_id
+    = f.label :image_url
+    = f.text_field :image_url
   .actions
     = f.submit 'Save'
