--- a/app/views/ar_products/show.html.haml
+++ b/app/views/ar_products/show.html.haml
@@ -7,11 +7,8 @@
   %b Product description:
   = @ar_product.product_description
 %p
-  %b Product url:
-  = @ar_product.product_url
-%p
-  %b Product serialized url:
-  = @ar_product.product_serialized_url
+  %b Image url:
+  = @ar_product.image_url
 
 = link_to 'Edit', edit_ar_product_path(@ar_product)
 \|
