--- a/app/views/ar_subcategories/show.html.haml
+++ b/app/views/ar_subcategories/show.html.haml
@@ -1,11 +1,14 @@
 %p#notice= notice
 
 %p
-  %b Ar subcategory name:
-  = @ar_subcategory.ar_subcategory_name
+  %b Name:
+  = @ar_subcategory.name
 %p
   %b Image url:
   = @ar_subcategory.image_url
+%p
+  %b Category:
+  = @ar_subcategory.ar_category_id
 
 = link_to 'Edit', edit_ar_subcategory_path(@ar_subcategory)
 \|
