--- a/app/views/ar_categories/_form.html.haml
+++ b/app/views/ar_categories/_form.html.haml
@@ -7,8 +7,8 @@
           %li= message
 
   .field
-    = f.label :ar_category_name
-    = f.text_field :ar_category_name
+    = f.label :name
+    = f.text_field :name
   .field
     = f.label :image_url
     = f.text_field :image_url
