--- a/app/views/ar_subcategories/_form.html.haml
+++ b/app/views/ar_subcategories/_form.html.haml
@@ -7,13 +7,13 @@
           %li= message
 
   .field
-    = f.label :ar_subcategory_name
-    = f.text_field :ar_subcategory_name
+    = f.label :name
+    = f.text_field :name
   .field
     = f.label :image_url
     = f.text_field :image_url
   .field
-    = f.label 'Category id'
-    = f.number_field :ar_categories_id
+    = f.label :ar_category_id
+    = f.number_field :ar_category_id
   .actions
     = f.submit 'Save'
