Start Ar Product.

--- a/app/views/ar_products/_form.html.haml
+++ b/app/views/ar_products/_form.html.haml
@@ -15,5 +15,8 @@
   .field
     = f.label :image_url
     = f.text_field :image_url
+  .field
+    = f.label :ar_subcategory
+    = f.text_field :ar_subcategories_id
   .actions
     = f.submit 'Save'
