Add ar categories subcategories and products paths to navbar menu

--- a/app/views/partials/_navbar.haml
+++ b/app/views/partials/_navbar.haml
@@ -9,3 +9,9 @@
           = link_to 'Users', users_path, class: 'nav-link'
         %li.nav-item
           = link_to 'Feed Items', feed_items_path, class: 'nav-link'
+        %li.nav-item
+          = link_to 'Ar Categories', ar_categories_path, class: 'nav-link'
+        %li.nav-item
+          = link_to 'Ar Subcategories', ar_subcategories_path, class: 'nav-link'
+        %li.nav-item
+          = link_to 'Ar Products', ar_products_path, class: 'nav-link'
