--- a/app/views/ar_products/_form.html.haml
+++ b/app/views/ar_products/_form.html.haml
@@ -17,6 +17,6 @@
     = f.text_field :image_url
   .field
     = f.label :ar_subcategory
-    = f.text_field :ar_subcategories_id
+    = f.number_field :ar_subcategory_id
   .actions
     = f.submit 'Save'
