--- a/app/views/ar_categories/_form.html.haml
+++ b/app/views/ar_categories/_form.html.haml
@@ -7,7 +7,7 @@
           %li= message
 
   .field
-    = f.label :name
+    = f.label 'Category Name: '
     = f.text_field :name
   .field
     = f.label :image_url
