--- a/app/views/ar_products/index.html.haml
+++ b/app/views/ar_products/index.html.haml
@@ -6,7 +6,7 @@
       %th Product name
       %th Product description
       %th Image url
-      %th
+      %th Ar Subcategory
       %th
       %th
 
@@ -16,6 +16,7 @@
         %td= ar_product.product_name
         %td= ar_product.product_description
         %td= ar_product.image_url
+        %td= ar_product.ar_subcategory_id
         %td= link_to 'Show', ar_product
         %td= link_to 'Edit', edit_ar_product_path(ar_product)
         %td= link_to 'Destroy', ar_product, method: :delete, data: { confirm: 'Are you sure?' }
