--- a/app/views/ar_products/show.html.haml
+++ b/app/views/ar_products/show.html.haml
@@ -9,6 +9,9 @@
 %p
   %b Image url:
   = @ar_product.image_url
+%p
+  %b Ar Subcategory:
+  = @ar_product.ar_subcategory_id
 
 = link_to 'Edit', edit_ar_product_path(@ar_product)
 \|
